--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/src/assets/cat_favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Black Cat | Streamer Landing Page</title>
+  <title>Black Cat</title>
   <link
     href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&amp;family=Outfit:wght@700;800&amp;family=Press+Start+2P&amp;family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0&amp;display=swap"
     rel="stylesheet" />
